--- a/TrackerUI/TournamentViewerForm.resx
+++ b/TrackerUI/TournamentViewerForm.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAABwAAAFgAAABxAAAAcQAAAHEAAABxAAAAcQAAAHEAAABxAAAAcQAA
+        AHEAAABxAAAAcQAAAHEAAABxAAAAcQAAAHEAAABxAAAAcQAAAHEAAABxAAAAcQAAAFgAAAAHAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARAAAAzAAAAOcAAADRAAAA0gAAANIAAADSAAAA0gAA
+        ANIAAADSAAAA0gAAANIAAADSAAAA0gAAANIAAADSAAAA0gAAANIAAADSAAAA0gAAANEAAADnAAAAzAAA
+        ABEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABEAAADPAAAAeQAAABUAAAAfAAAAHwAA
+        AB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAfAAAAFQAA
+        AHkAAADPAAAAEQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEQAAAM8AAABpAAAAPQAA
+        AL0AAADBAAAAwQAAAMEAAADBAAAAwQAAAMEAAADBAAAAwQAAAMEAAADBAAAAwQAAAMEAAADBAAAAwQAA
+        AL0AAAA9AAAAaQAAAM8AAAARAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARAAAAzwAA
+        AGgAAABVAAAA6gAAAIwAAAB+AAAAfwAAAH8AAAB/AAAAfwAAAH8AAAB/AAAAfwAAAH8AAAB/AAAAfwAA
+        AH4AAACMAAAA6gAAAFUAAABoAAAAzwAAABEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ABEAAADPAAAAaAAAAFYAAADXAAAAGgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAABoAAADXAAAAVgAAAGgAAADPAAAAEQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAEQAAAM8AAABoAAAAVgAAANgAAAAaAAAAAAAAAA0AAAAaAAAAGgAAABoAAAAaAAAAGgAA
+        ABoAAAAaAAAAGgAAAA0AAAAAAAAAGgAAANgAAABWAAAAaAAAAM8AAAARAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAARAAAAzwAAAGgAAABWAAAA2AAAABoAAAAAAAAAaAAAANoAAADYAAAA2AAA
+        ANgAAADYAAAA2AAAANgAAADaAAAAaAAAAAAAAAAaAAAA2AAAAFYAAABoAAAAzwAAABEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABEAAADPAAAAaAAAAFYAAADYAAAAGgAAAAAAAAArAAAAWwAA
+        AFoAAABaAAAAWgAAAFoAAABaAAAAWgAAAFsAAAArAAAAAAAAABoAAADYAAAAVgAAAGgAAADPAAAAEQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEQAAAM8AAABoAAAAVgAAANgAAAAaAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGgAAANgAAABWAAAAaAAA
+        AM8AAAARAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARAAAAzwAAAGgAAABWAAAA2AAA
+        ABoAAAAAAAAAGAAAADMAAAAyAAAAMgAAADIAAAAyAAAAMgAAADIAAAAzAAAAGAAAAAAAAAAaAAAA2AAA
+        AFYAAABoAAAAzwAAABEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABEAAADPAAAAaAAA
+        AFYAAADYAAAAGgAAAAAAAABsAAAA5AAAAOEAAADhAAAA4QAAAOEAAADhAAAA4QAAAOQAAABsAAAAAAAA
+        ABoAAADYAAAAVgAAAGgAAADPAAAAEQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEQAA
+        AM8AAABoAAAAVgAAANgAAAAaAAAAAAAAABwAAAA6AAAAOgAAADoAAAA6AAAAOgAAADoAAAA6AAAAOgAA
+        ABwAAAAAAAAAGgAAANgAAABWAAAAaAAAAM8AAAARAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAARAAAAzwAAAGgAAABWAAAA2AAAABoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAaAAAA2AAAAFYAAABoAAAAzwAAABEAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAABEAAADPAAAAaAAAAFYAAADYAAAAGgAAAAAAAAAnAAAAUwAAAFIAAABSAAAAUgAA
+        AFIAAABSAAAAUgAAAFMAAAAnAAAAAAAAABoAAADYAAAAVgAAAGgAAADPAAAAEQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAEQAAAM8AAABoAAAAVgAAANgAAAAaAAAAAAAAAGoAAADeAAAA3AAA
+        ANwAAADcAAAA3AAAANwAAADcAAAA3gAAAGoAAAAAAAAAGgAAANgAAABWAAAAaAAAAM8AAAARAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARAAAAzwAAAGgAAABWAAAA2AAAABoAAAAAAAAADwAA
+        ACAAAAAfAAAAHwAAAB8AAAAfAAAAHwAAAB8AAAAgAAAADwAAAAAAAAAaAAAA2AAAAFYAAABoAAAAzwAA
+        ABEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABEAAADPAAAAaAAAAFYAAADYAAAAGgAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABoAAADYAAAAVgAA
+        AGgAAADPAAAAEQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEQAAAM8AAABoAAAAVgAA
+        ANgAAAAaAAAAAAAAADgAAAB3AAAAdQAAAHUAAAB1AAAAdQAAAHUAAAB1AAAAdwAAADgAAAAAAAAAGgAA
+        ANgAAABWAAAAaAAAAM8AAAARAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARAAAAzwAA
+        AGgAAABWAAAA2AAAABoAAAAAAAAAYQAAAMsAAADIAAAAyAAAAMgAAADIAAAAyAAAAMgAAADLAAAAYQAA
+        AAAAAAAaAAAA2AAAAFYAAABoAAAAzwAAABEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ABEAAADPAAAAaAAAAFYAAADYAAAAGgAAAAAAAAAGAAAADQAAAA0AAAANAAAADQAAAA0AAAANAAAADQAA
+        AA0AAAAGAAAAAAAAABoAAADYAAAAVgAAAGgAAADPAAAAEQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAEQAAAM8AAABoAAAAVgAAANgAAAAaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAGgAAANgAAABWAAAAaAAAAM8AAAARAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAARAAAAzwAAAGgAAABWAAAA1wAAABgAAAAbAAAAjAAAAJoAAACaAAAAmgAA
+        AJoAAACaAAAAmgAAAJoAAACaAAAAjAAAABsAAAAYAAAA1wAAAFYAAABoAAAAzwAAABEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABEAAADPAAAAaAAAAFUAAADlAAAAaQAAAHkAAADwAAAAvwAA
+        AKsAAACsAAAArAAAAKwAAACsAAAAqwAAAL8AAADwAAAAeQAAAGkAAADlAAAAVQAAAGgAAADPAAAAEQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEQAAAM8AAABpAAAARgAAANcAAADXAAAA4AAA
+        APAAAAA7AAAAAAAAAAIAAAACAAAAAgAAAAIAAAAAAAAAOwAAAPAAAADgAAAA1wAAANcAAABGAAAAaQAA
+        AM8AAAARAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAARAAAAzwAAAHAAAAALAAAAIAAA
+        AB4AAABNAAAA4wAAADoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA6AAAA4wAAAE0AAAAeAAAAIAAA
+        AAsAAABwAAAAzwAAABEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABEAAADOAAAA2wAA
+        ALkAAAC5AAAAuQAAAMgAAADtAAAAOQAAAAAAAAAAAAAAIAAAACAAAAAAAAAAAAAAADkAAADtAAAAyAAA
+        ALkAAAC5AAAAuQAAANsAAADOAAAAEQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACQAA
+        AGoAAACIAAAAiAAAAIgAAACHAAAAoAAAAPEAAACdAAAAagAAABAAAACPAAAAjwAAABAAAABqAAAAnQAA
+        APEAAACgAAAAhwAAAIgAAACIAAAAiAAAAGoAAAAJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlAAAAswAAAMcAAADsAAAAXQAAACEAAAAhAAAAXQAA
+        AOwAAADHAAAAswAAACUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAJAAAADAAAAJoAAADDAAAAHwAA
+        AB8AAADDAAAAmgAAAAwAAAAJAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANAAA
+        AOEAAADaAAAA2gAAAOEAAAA0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAFAAAAUwAAAHIAAAByAAAAUwAAAAUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA8AAAD/AAAA/wAAAP8AAAD/AAAA/wP/wP8CAED/AgBA/wIAQP8D/8D/Ag
+        BA/wIAQP8CAED/A//A/wIAQP8CAED/AgBA/wP/wP8CAED/AgBA/wIAQP8D/8D/AAAA/wAAAP8AQgD/AH
+        4A/wBmAP8AAAD//AA///wAP///gf///4H/8=
+</value>
+  </data>
 </root>
